tasks: add stop_workflow task
* Implements `stop_workflow` with a new Celery task. Note that this
  approach is not a perfect solution since while the task is submitted
  and actually executed, the engine might submit new jobs ... we assume
  this since we will soon change the way we run workflows, from Celery
  task based to Kubernetes deployments.
